--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "numbers": "c",
         "chrono": "c",
         "time.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "math.h": "c",
+        "limits.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
