--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,14 +1,14 @@
 NAME = philo
 SRC = routine.c parcing.c init_monit.c extra_routine.c main.c
 CC = cc -g
-FLAGS = -Werror -Wextra -Wall
+CFLAGS = -Werror -Wextra -Wall
 RM = rm -rf
 OBJ = $(SRC:.c=.o)
 
 all:$(NAME)
 
-$(NAME):$(OBJ)
-	$(CC) $(OBJ) $(FLAGS) -o $(NAME)
+$(NAME):$(OBJ) 
+	$(CC) $(CFLAGS) $(OBJ)  -o $(NAME)
 
 re:fclean all
 
